julia_experiments/_cimgui.h

typedef unsigned int     size_t;
typedef char bool;
                
     
struct ImDrawCmd;
struct ImDrawList;
struct ImDrawData;
struct ImFont;
struct ImFontAtlas;
typedef unsigned int ImU32;
typedef unsigned short ImWchar;
     
typedef void* ImTextureID;
          
typedef int ImGuiKey;
     
typedef int ImGuiMouseCursor;
struct ImVec2
{
    float x, y;
};
struct ImVec4
{
    float x, y, z, w;
};
typedef void (*ImDrawCallback)(const struct ImDrawList* parent_list, const struct ImDrawCmd* cmd);
struct ImDrawCmd
{
    unsigned int    ElemCount;              
    struct ImVec4          ClipRect;               
    ImTextureID     TextureId;              
    ImDrawCallback  UserCallback;           
    //void*           UserCallbackData;           struct ImDrawCmd() { ElemCount = 0; ClipRect.x = ClipRect.y = -8192.0f; ClipRect.z = ClipRect.w = +8192.0f; TextureId = 0; UserCallback = 0; UserCallbackData = 0; }
};
typedef unsigned short ImDrawIdx;
struct ImDrawVert
{
    struct ImVec2  pos;
    struct ImVec2  uv;
    ImU32   col;
};
struct ImDrawList
{
};
struct ImDrawData
{
    bool            Valid;                  
    struct ImDrawList**    CmdLists;
    int             CmdListsCount;
    int             TotalVtxCount;          
    int             TotalIdxCount;              
    // struct ImDrawData() { Valid = false; CmdLists = 0; CmdListsCount = TotalVtxCount = TotalIdxCount = 0; }
    //  void DeIndexAllBuffers(void);               
    //  void ScaleClipRects(const struct ImVec2& sc);  
};
struct ImFontConfig
{
    void*           FontData;                   
    int             FontDataSize;               
    bool            FontDataOwnedByAtlas;       
    int             FontNo;                     
    float           SizePixels;                 
    int             OversampleH, OversampleV;   
    bool            PixelSnapH;                 
    struct ImVec2          GlyphExtraSpacing;          
    const ImWchar*  GlyphRanges;                
    bool            MergeMode;                  
    bool            MergeGlyphCenterV;              
    char            Name[32];                               
    struct ImFont*         DstFont;   
    //  struct ImFontConfig(void);
};
struct ImFontAtlas
{
};
struct ImFont
{
    
    float                       FontSize;           
    float                       Scale;              
    struct ImVec2                      DisplayOffset;      
    ImWchar                     FallbackChar;       
    struct ImFontConfig*               ConfigData;         
    int                         ConfigDataCount;        
    // struct Glyph
    // {
    //     ImWchar                 Codepoint;
    //     float                   XAdvance;
    //     float                   X0, Y0, X1, Y1;
    //     float                   U0, V0, U1, V1;     
    // };
    float                       Ascent, Descent;    
    struct ImFontAtlas*                ContainerAtlas;     
};
extern bool             igCombo3(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items);
extern bool             igListBox2(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items);
extern void             igColorConvertRGBtoHSV(float r, float g, float b, float* out_h, float* out_s, float* out_v);
extern void             igColorConvertHSVtoRGB(float h, float s, float v, float* out_r, float* out_g, float* out_b);
extern int              igGetKeyIndex(ImGuiKey key);
extern bool             igIsKeyDown(int key_index);
extern bool             igIsKeyPressed(int key_index, bool repeat);
extern bool             igIsKeyReleased(int key_index);
extern bool             igIsMouseDown(int button);
extern bool             igIsMouseClicked(int button, bool repeat);
extern bool             igIsMouseDoubleClicked(int button);
extern bool             igIsMouseReleased(int button);
extern bool             igIsMouseHoveringWindow(void);
extern bool             igIsMouseHoveringAnyWindow(void);
extern bool             igIsMouseHoveringRect(const struct ImVec2 pos_min, const struct ImVec2 pos_max, bool clip);
extern bool             igIsMouseDragging(int button, float lock_threshold);
extern void             igGetMousePos(struct ImVec2* pOut);
extern void             igGetMousePosOnOpeningCurrentPopup(struct ImVec2* pOut);
extern void             igGetMouseDragDelta(struct ImVec2* pOut, int button, float lock_threshold);
extern void             igResetMouseDragDelta(int button);
extern ImGuiMouseCursor igGetMouseCursor(void);
extern void             igSetMouseCursor(ImGuiMouseCursor type);
extern void             igCaptureKeyboardFromApp(void);
extern void             igCaptureMouseFromApp(void);
extern void*            igMemAlloc(size_t sz);
extern void             igMemFree(void* ptr);
extern const char*      igGetClipboardText(void);
extern void             igSetClipboardText(const char* text);
extern const char*      igGetVersion(void);
extern void*            igGetInternalState(void);
extern size_t           igGetInternalStateSize(void);
extern void             igSetInternalState(void* state, bool construct);
extern void             ImFontAtlas_GetTexDataAsRGBA32(struct ImFontAtlas* atlas, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel);
extern void             ImFontAtlas_GetTexDataAsAlpha8(struct ImFontAtlas* atlas, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel);
extern void             ImFontAtlas_SetTexID(struct ImFontAtlas* atlas, void* tex);
extern struct ImFont*             ImFontAtlas_AddFont(struct ImFontAtlas* atlas, const struct ImFontConfig* font_cfg);
extern struct ImFont*             ImFontAtlas_AddFontDefault(struct ImFontAtlas* atlas, const struct ImFontConfig* font_cfg);
extern struct ImFont*             ImFontAtlas_AddFontFromFileTTF(struct ImFontAtlas* atlas, const char* filename, float size_pixels, const struct ImFontConfig* font_cfg, const ImWchar* glyph_ranges);
extern struct ImFont*             ImFontAtlas_AddFontFromMemoryTTF(struct ImFontAtlas* atlas, void* ttf_data, int ttf_size, float size_pixels, const struct ImFontConfig* font_cfg, const ImWchar* glyph_ranges);
extern struct ImFont*             ImFontAtlas_AddFontFromMemoryCompressedTTF(struct ImFontAtlas* atlas, const void* compressed_ttf_data, int compressed_ttf_size, float size_pixels, const struct ImFontConfig* font_cfg, const ImWchar* glyph_ranges);
extern struct ImFont*             ImFontAtlas_AddFontFromMemoryCompressedBase85TTF(struct ImFontAtlas* atlas, const char* compressed_ttf_data_base85, float size_pixels, const struct ImFontConfig* font_cfg, const ImWchar* glyph_ranges);
extern void             ImFontAtlas_ClearTexData(struct ImFontAtlas* atlas);
extern void             ImFontAtlas_Clear(struct ImFontAtlas* atlas);
extern void             ImGuiIO_AddInputCharacter(unsigned short c);
extern void             ImGuiIO_AddInputCharactersUTF8(const char* utf8_chars);
extern void             ImGuiIO_ClearInputCharacters(void);
extern void             ImDrawData_DeIndexAllBuffers(struct ImDrawData* drawData);
extern int             ImDrawList_GetVertexBufferSize(struct ImDrawList* list);
extern struct ImDrawVert*      ImDrawList_GetVertexPtr(struct ImDrawList* list, int n);
extern int             ImDrawList_GetIndexBufferSize(struct ImDrawList* list);
extern ImDrawIdx*       ImDrawList_GetIndexPtr(struct ImDrawList* list, int n);
extern int             ImDrawList_GetCmdSize(struct ImDrawList* list);
extern struct ImDrawCmd*       ImDrawList_GetCmdPtr(struct ImDrawList* list, int n);
extern void             ImDrawList_Clear(struct ImDrawList* list);
extern void             ImDrawList_ClearFreeMemory(struct ImDrawList* list);
extern void             ImDrawList_PushClipRect(struct ImDrawList* list, const struct ImVec4 clip_rect);
 
extern void             ImDrawList_PushClipRectFullScreen(struct ImDrawList* list);
extern void             ImDrawList_PopClipRect(struct ImDrawList* list);
extern void             ImDrawList_PushTextureID(struct ImDrawList* list, const ImTextureID texture_id);
extern void             ImDrawList_PopTextureID(struct ImDrawList* list);
extern void             ImDrawList_AddLine(struct ImDrawList* list, const struct ImVec2 a, const struct ImVec2 b, ImU32 col, float thickness);
extern void             ImDrawList_AddRect(struct ImDrawList* list, const struct ImVec2 a, const struct ImVec2 b, ImU32 col, float rounding, int rounding_corners);
extern void             ImDrawList_AddRectFilled(struct ImDrawList* list, const struct ImVec2 a, const struct ImVec2 b, ImU32 col, float rounding, int rounding_corners);
extern void             ImDrawList_AddRectFilledMultiColor(struct ImDrawList* list, const struct ImVec2 a, const struct ImVec2 b, ImU32 col_upr_left, ImU32 col_upr_right, ImU32 col_bot_right, ImU32 col_bot_left);
extern void             ImDrawList_AddTriangleFilled(struct ImDrawList* list, const struct ImVec2 a, const struct ImVec2 b, const struct ImVec2 c, ImU32 col);
extern void             ImDrawList_AddCircle(struct ImDrawList* list, const struct ImVec2 centre, float radius, ImU32 col, int num_segments);
extern void             ImDrawList_AddCircleFilled(struct ImDrawList* list, const struct ImVec2 centre, float radius, ImU32 col, int num_segments);
extern void             ImDrawList_AddText(struct ImDrawList* list, const struct ImVec2 pos, ImU32 col, const char* text_begin, const char* text_end);
extern void             ImDrawList_AddTextExt(struct ImDrawList* list, const struct ImFont* font, float font_size, const struct ImVec2 pos, ImU32 col, const char* text_begin, const char* text_end, float wrap_width, const struct ImVec4* cpu_fine_clip_rect);