julia_experiments/cimgui.jl


function igColorConvertRGBtoHSV(r::Cfloat,g::Cfloat,b::Cfloat,out_h::Ptr{Cfloat},out_s::Ptr{Cfloat},out_v::Ptr{Cfloat})
    ccall((:igColorConvertRGBtoHSV,cimgui),Void,(Cfloat,Cfloat,Cfloat,Ptr{Cfloat},Ptr{Cfloat},Ptr{Cfloat}),r,g,b,out_h,out_s,out_v)
end

function igColorConvertHSVtoRGB(h::Cfloat,s::Cfloat,v::Cfloat,out_r::Ptr{Cfloat},out_g::Ptr{Cfloat},out_b::Ptr{Cfloat})
    ccall((:igColorConvertHSVtoRGB,cimgui),Void,(Cfloat,Cfloat,Cfloat,Ptr{Cfloat},Ptr{Cfloat},Ptr{Cfloat}),h,s,v,out_r,out_g,out_b)
end

function igGetKeyIndex(key::ImGuiKey)
    ccall((:igGetKeyIndex,cimgui),Cint,(ImGuiKey,),key)
end

function igIsKeyDown(key_index::Cint)
    ccall((:igIsKeyDown,cimgui),bool,(Cint,),key_index)
end

function igIsKeyPressed(key_index::Cint,repeat::bool)
    ccall((:igIsKeyPressed,cimgui),bool,(Cint,bool),key_index,repeat)
end

function igIsKeyReleased(key_index::Cint)
    ccall((:igIsKeyReleased,cimgui),bool,(Cint,),key_index)
end

function igIsMouseDown(button::Cint)
    ccall((:igIsMouseDown,cimgui),bool,(Cint,),button)
end

function igIsMouseClicked(button::Cint,repeat::bool)
    ccall((:igIsMouseClicked,cimgui),bool,(Cint,bool),button,repeat)
end

function igIsMouseDoubleClicked(button::Cint)
    ccall((:igIsMouseDoubleClicked,cimgui),bool,(Cint,),button)
end

function igIsMouseReleased(button::Cint)
    ccall((:igIsMouseReleased,cimgui),bool,(Cint,),button)
end

function igIsMouseHoveringWindow()
    ccall((:igIsMouseHoveringWindow,cimgui),bool,())
end

function igIsMouseHoveringAnyWindow()
    ccall((:igIsMouseHoveringAnyWindow,cimgui),bool,())
end

function igIsMouseHoveringRect(pos_min::ImVec2,pos_max::ImVec2,clip::bool)
    ccall((:igIsMouseHoveringRect,cimgui),bool,(ImVec2,ImVec2,bool),pos_min,pos_max,clip)
end

function igIsMouseDragging(button::Cint,lock_threshold::Cfloat)
    ccall((:igIsMouseDragging,cimgui),bool,(Cint,Cfloat),button,lock_threshold)
end

function igGetMousePos(pOut::Ptr{ImVec2})
    ccall((:igGetMousePos,cimgui),Void,(Ptr{ImVec2},),pOut)
end

function igGetMousePosOnOpeningCurrentPopup(pOut::Ptr{ImVec2})
    ccall((:igGetMousePosOnOpeningCurrentPopup,cimgui),Void,(Ptr{ImVec2},),pOut)
end

function igGetMouseDragDelta(pOut::Ptr{ImVec2},button::Cint,lock_threshold::Cfloat)
    ccall((:igGetMouseDragDelta,cimgui),Void,(Ptr{ImVec2},Cint,Cfloat),pOut,button,lock_threshold)
end

function igResetMouseDragDelta(button::Cint)
    ccall((:igResetMouseDragDelta,cimgui),Void,(Cint,),button)
end

function igGetMouseCursor()
    ccall((:igGetMouseCursor,cimgui),ImGuiMouseCursor,())
end

function igSetMouseCursor(_type::ImGuiMouseCursor)
    ccall((:igSetMouseCursor,cimgui),Void,(ImGuiMouseCursor,),_type)
end

function igCaptureKeyboardFromApp()
    ccall((:igCaptureKeyboardFromApp,cimgui),Void,())
end

function igCaptureMouseFromApp()
    ccall((:igCaptureMouseFromApp,cimgui),Void,())
end

function igMemAlloc(sz::Csize_t)
    ccall((:igMemAlloc,cimgui),Ptr{Void},(Csize_t,),sz)
end

function igMemFree(ptr::Ptr{Void})
    ccall((:igMemFree,cimgui),Void,(Ptr{Void},),ptr)
end

function igGetClipboardText()
    ccall((:igGetClipboardText,cimgui),Ptr{UInt8},())
end

function igSetClipboardText(text::Ptr{UInt8})
    ccall((:igSetClipboardText,cimgui),Void,(Ptr{UInt8},),text)
end

function igGetVersion()
    ccall((:igGetVersion,cimgui),Ptr{UInt8},())
end

function igGetInternalState()
    ccall((:igGetInternalState,cimgui),Ptr{Void},())
end

function igGetInternalStateSize()
    ccall((:igGetInternalStateSize,cimgui),Csize_t,())
end

function igSetInternalState(state::Ptr{Void},construct::bool)
    ccall((:igSetInternalState,cimgui),Void,(Ptr{Void},bool),state,construct)
end

function ImFontAtlas_GetTexDataAsRGBA32(atlas::Ptr{ImFontAtlas},out_pixels::Ptr{Ptr{Cuchar}},out_width::Ptr{Cint},out_height::Ptr{Cint},out_bytes_per_pixel::Ptr{Cint})
    ccall((:ImFontAtlas_GetTexDataAsRGBA32,cimgui),Void,(Ptr{ImFontAtlas},Ptr{Ptr{Cuchar}},Ptr{Cint},Ptr{Cint},Ptr{Cint}),atlas,out_pixels,out_width,out_height,out_bytes_per_pixel)
end

function ImFontAtlas_GetTexDataAsAlpha8(atlas::Ptr{ImFontAtlas},out_pixels::Ptr{Ptr{Cuchar}},out_width::Ptr{Cint},out_height::Ptr{Cint},out_bytes_per_pixel::Ptr{Cint})
    ccall((:ImFontAtlas_GetTexDataAsAlpha8,cimgui),Void,(Ptr{ImFontAtlas},Ptr{Ptr{Cuchar}},Ptr{Cint},Ptr{Cint},Ptr{Cint}),atlas,out_pixels,out_width,out_height,out_bytes_per_pixel)
end

function ImFontAtlas_SetTexID(atlas::Ptr{ImFontAtlas},tex::Ptr{Void})
    ccall((:ImFontAtlas_SetTexID,cimgui),Void,(Ptr{ImFontAtlas},Ptr{Void}),atlas,tex)
end

function ImFontAtlas_AddFont(atlas::Ptr{ImFontAtlas},font_cfg::Ptr{ImFontConfig})
    ccall((:ImFontAtlas_AddFont,cimgui),Ptr{ImFont},(Ptr{ImFontAtlas},Ptr{ImFontConfig}),atlas,font_cfg)
end

function ImFontAtlas_AddFontDefault(atlas::Ptr{ImFontAtlas},font_cfg::Ptr{ImFontConfig})
    ccall((:ImFontAtlas_AddFontDefault,cimgui),Ptr{ImFont},(Ptr{ImFontAtlas},Ptr{ImFontConfig}),atlas,font_cfg)
end

function ImFontAtlas_AddFontFromFileTTF(atlas::Ptr{ImFontAtlas},filename::Ptr{UInt8},size_pixels::Cfloat,font_cfg::Ptr{ImFontConfig},glyph_ranges::Ptr{ImWchar})
    ccall((:ImFontAtlas_AddFontFromFileTTF,cimgui),Ptr{ImFont},(Ptr{ImFontAtlas},Ptr{UInt8},Cfloat,Ptr{ImFontConfig},Ptr{ImWchar}),atlas,filename,size_pixels,font_cfg,glyph_ranges)
end

function ImFontAtlas_AddFontFromMemoryTTF(atlas::Ptr{ImFontAtlas},ttf_data::Ptr{Void},ttf_size::Cint,size_pixels::Cfloat,font_cfg::Ptr{ImFontConfig},glyph_ranges::Ptr{ImWchar})
    ccall((:ImFontAtlas_AddFontFromMemoryTTF,cimgui),Ptr{ImFont},(Ptr{ImFontAtlas},Ptr{Void},Cint,Cfloat,Ptr{ImFontConfig},Ptr{ImWchar}),atlas,ttf_data,ttf_size,size_pixels,font_cfg,glyph_ranges)
end

function ImFontAtlas_AddFontFromMemoryCompressedTTF(atlas::Ptr{ImFontAtlas},compressed_ttf_data::Ptr{Void},compressed_ttf_size::Cint,size_pixels::Cfloat,font_cfg::Ptr{ImFontConfig},glyph_ranges::Ptr{ImWchar})
    ccall((:ImFontAtlas_AddFontFromMemoryCompressedTTF,cimgui),Ptr{ImFont},(Ptr{ImFontAtlas},Ptr{Void},Cint,Cfloat,Ptr{ImFontConfig},Ptr{ImWchar}),atlas,compressed_ttf_data,compressed_ttf_size,size_pixels,font_cfg,glyph_ranges)
end

function ImFontAtlas_AddFontFromMemoryCompressedBase85TTF(atlas::Ptr{ImFontAtlas},compressed_ttf_data_base85::Ptr{UInt8},size_pixels::Cfloat,font_cfg::Ptr{ImFontConfig},glyph_ranges::Ptr{ImWchar})
    ccall((:ImFontAtlas_AddFontFromMemoryCompressedBase85TTF,cimgui),Ptr{ImFont},(Ptr{ImFontAtlas},Ptr{UInt8},Cfloat,Ptr{ImFontConfig},Ptr{ImWchar}),atlas,compressed_ttf_data_base85,size_pixels,font_cfg,glyph_ranges)
end

function ImFontAtlas_ClearTexData(atlas::Ptr{ImFontAtlas})
    ccall((:ImFontAtlas_ClearTexData,cimgui),Void,(Ptr{ImFontAtlas},),atlas)
end

function ImFontAtlas_Clear(atlas::Ptr{ImFontAtlas})
    ccall((:ImFontAtlas_Clear,cimgui),Void,(Ptr{ImFontAtlas},),atlas)
end

function ImGuiIO_AddInputCharacter(c::UInt16)
    ccall((:ImGuiIO_AddInputCharacter,cimgui),Void,(UInt16,),c)
end

function ImGuiIO_AddInputCharactersUTF8(utf8_chars::Ptr{UInt8})
    ccall((:ImGuiIO_AddInputCharactersUTF8,cimgui),Void,(Ptr{UInt8},),utf8_chars)
end

function ImGuiIO_ClearInputCharacters()
    ccall((:ImGuiIO_ClearInputCharacters,cimgui),Void,())
end

function ImDrawData_DeIndexAllBuffers(drawData::Ptr{ImDrawData})
    ccall((:ImDrawData_DeIndexAllBuffers,cimgui),Void,(Ptr{ImDrawData},),drawData)
end

function ImDrawList_GetVertexBufferSize(list::Ptr{ImDrawList})
    ccall((:ImDrawList_GetVertexBufferSize,cimgui),Cint,(Ptr{ImDrawList},),list)
end

function ImDrawList_GetVertexPtr(list::Ptr{ImDrawList},n::Cint)
    ccall((:ImDrawList_GetVertexPtr,cimgui),Ptr{ImDrawVert},(Ptr{ImDrawList},Cint),list,n)
end

function ImDrawList_GetIndexBufferSize(list::Ptr{ImDrawList})
    ccall((:ImDrawList_GetIndexBufferSize,cimgui),Cint,(Ptr{ImDrawList},),list)
end

function ImDrawList_GetIndexPtr(list::Ptr{ImDrawList},n::Cint)
    ccall((:ImDrawList_GetIndexPtr,cimgui),Ptr{ImDrawIdx},(Ptr{ImDrawList},Cint),list,n)
end

function ImDrawList_GetCmdSize(list::Ptr{ImDrawList})
    ccall((:ImDrawList_GetCmdSize,cimgui),Cint,(Ptr{ImDrawList},),list)
end

function ImDrawList_GetCmdPtr(list::Ptr{ImDrawList},n::Cint)
    ccall((:ImDrawList_GetCmdPtr,cimgui),Ptr{ImDrawCmd},(Ptr{ImDrawList},Cint),list,n)
end

function ImDrawList_Clear(list::Ptr{ImDrawList})
    ccall((:ImDrawList_Clear,cimgui),Void,(Ptr{ImDrawList},),list)
end

function ImDrawList_ClearFreeMemory(list::Ptr{ImDrawList})
    ccall((:ImDrawList_ClearFreeMemory,cimgui),Void,(Ptr{ImDrawList},),list)
end

function ImDrawList_PushClipRect(list::Ptr{ImDrawList},clip_rect::ImVec4)
    ccall((:ImDrawList_PushClipRect,cimgui),Void,(Ptr{ImDrawList},ImVec4),list,clip_rect)
end

function ImDrawList_PushClipRectFullScreen(list::Ptr{ImDrawList})
    ccall((:ImDrawList_PushClipRectFullScreen,cimgui),Void,(Ptr{ImDrawList},),list)
end

function ImDrawList_PopClipRect(list::Ptr{ImDrawList})
    ccall((:ImDrawList_PopClipRect,cimgui),Void,(Ptr{ImDrawList},),list)
end

function ImDrawList_PushTextureID(list::Ptr{ImDrawList},texture_id::ImTextureID)
    ccall((:ImDrawList_PushTextureID,cimgui),Void,(Ptr{ImDrawList},ImTextureID),list,texture_id)
end

function ImDrawList_PopTextureID(list::Ptr{ImDrawList})
    ccall((:ImDrawList_PopTextureID,cimgui),Void,(Ptr{ImDrawList},),list)
end

function ImDrawList_AddLine(list::Ptr{ImDrawList},a::ImVec2,b::ImVec2,col::ImU32,thickness::Cfloat)
    ccall((:ImDrawList_AddLine,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImU32,Cfloat),list,a,b,col,thickness)
end

function ImDrawList_AddRect(list::Ptr{ImDrawList},a::ImVec2,b::ImVec2,col::ImU32,rounding::Cfloat,rounding_corners::Cint)
    ccall((:ImDrawList_AddRect,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImU32,Cfloat,Cint),list,a,b,col,rounding,rounding_corners)
end

function ImDrawList_AddRectFilled(list::Ptr{ImDrawList},a::ImVec2,b::ImVec2,col::ImU32,rounding::Cfloat,rounding_corners::Cint)
    ccall((:ImDrawList_AddRectFilled,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImU32,Cfloat,Cint),list,a,b,col,rounding,rounding_corners)
end

function ImDrawList_AddRectFilledMultiColor(list::Ptr{ImDrawList},a::ImVec2,b::ImVec2,col_upr_left::ImU32,col_upr_right::ImU32,col_bot_right::ImU32,col_bot_left::ImU32)
    ccall((:ImDrawList_AddRectFilledMultiColor,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImU32,ImU32,ImU32,ImU32),list,a,b,col_upr_left,col_upr_right,col_bot_right,col_bot_left)
end

function ImDrawList_AddTriangleFilled(list::Ptr{ImDrawList},a::ImVec2,b::ImVec2,c::ImVec2,col::ImU32)
    ccall((:ImDrawList_AddTriangleFilled,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImVec2,ImU32),list,a,b,c,col)
end

function ImDrawList_AddCircle(list::Ptr{ImDrawList},centre::ImVec2,radius::Cfloat,col::ImU32,num_segments::Cint)
    ccall((:ImDrawList_AddCircle,cimgui),Void,(Ptr{ImDrawList},ImVec2,Cfloat,ImU32,Cint),list,centre,radius,col,num_segments)
end

function ImDrawList_AddCircleFilled(list::Ptr{ImDrawList},centre::ImVec2,radius::Cfloat,col::ImU32,num_segments::Cint)
    ccall((:ImDrawList_AddCircleFilled,cimgui),Void,(Ptr{ImDrawList},ImVec2,Cfloat,ImU32,Cint),list,centre,radius,col,num_segments)
end

function ImDrawList_AddText(list::Ptr{ImDrawList},pos::ImVec2,col::ImU32,text_begin::Ptr{UInt8},text_end::Ptr{UInt8})
    ccall((:ImDrawList_AddText,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImU32,Ptr{UInt8},Ptr{UInt8}),list,pos,col,text_begin,text_end)
end

function ImDrawList_AddTextExt(list::Ptr{ImDrawList},font::Ptr{ImFont},font_size::Cfloat,pos::ImVec2,col::ImU32,text_begin::Ptr{UInt8},text_end::Ptr{UInt8},wrap_width::Cfloat,cpu_fine_clip_rect::Ptr{ImVec4})
    ccall((:ImDrawList_AddTextExt,cimgui),Void,(Ptr{ImDrawList},Ptr{ImFont},Cfloat,ImVec2,ImU32,Ptr{UInt8},Ptr{UInt8},Cfloat,Ptr{ImVec4}),list,font,font_size,pos,col,text_begin,text_end,wrap_width,cpu_fine_clip_rect)
end
